@@ -27,7 +27,7 @@ my %conf = (
     RRDPATH           => "@PERFDATA_DIR@",
     RRDTOOL           => "@RRDTOOL@",
     LOG_LEVEL         => 0,
-    DRY_RUN           => 1,
+    DRY_RUN           => 0,
     TMP_DIR           => '/tmp/rrd_convert',
     RRD_DAEMON_OPTS   => "",
     XML_MAX_AGE       => 3600,
@@ -48,8 +48,9 @@ my ( $opt_V, $opt_h, $opt_c, $opt_l );
 GetOptions(
     "V|version"         => \$opt_V,
     "h|help"            => \$opt_h,
-    "check_command=s"   => \$opt_c,
-    "list_commands"     => \$opt_l,
+    "check-command=s"   => \$opt_c,
+    "list-commands"     => \$opt_l,
+    "dry-run"           => \$conf{DRY_RUN},
 );
 
 print_help()    if $opt_h;
@@ -57,8 +58,9 @@ print_help()    if !$opt_c;
 print_version() if $opt_V;
 
 parse_config($conf{CFG_DIR}."/process_perfdata.cfg");
-if($conf{RRD_DAEMON_OPTS}){
+if ( $conf{RRD_DAEMON_OPTS} ){
 	$conf{RRD_DAEMON_OPTS} = "--daemon=".$conf{RRD_DAEMON_OPTS};
+	print "AAAAAA ".$conf{RRD_DAEMON_OPTS}."\n";
 }
 
 my @STRUCT; 
@@ -75,6 +77,7 @@ my %stats = (
 	'rrd_in'  => 0,
 	'rrd_out' => 0,
 	'old_xml' => 0,
+	'runtime' => 0,
 );
 
 main();
@@ -96,11 +99,11 @@ sub main{
                         exit;
                 }
 	}else{
-
 		print "Check Command '".$opt_c."' not found in any XML File\n";
 		exit;
 	}
-
+	check_custom_template();
+	my $t0 = [gettimeofday];
 	my $i = 0;
 	foreach my $xmlfile ( @worklist ) {
 		$i++;
@@ -123,6 +126,8 @@ sub main{
 			restore_files($host,$service);
 		}
 	}
+	my $t1 = [gettimeofday];
+	$stats{runtime} = tv_interval $t0, $t1;
 	print "DONE\n";
 	stats();
 }
@@ -130,10 +135,15 @@ sub main{
 
 sub build_ds_list{
 	my $rrdfile = shift;
-	my $info = RRDs::info ("$rrdfile", $conf{RRD_DAEMON_OPTS});
+	my $info;
+	if ( $conf{RRD_DAEMON_OPTS} ){
+		$info = RRDs::info ("$rrdfile", $conf{RRD_DAEMON_OPTS});
+	}else{
+		$info = RRDs::info ("$rrdfile");
+	}
 	my $err = RRDs::error();
 	if($err){
-		print $err;
+		printf("RRDtool Error: %s\n",$err);
 		exit;
 	}
 	foreach my $key (sort keys %$info){
@@ -212,7 +222,7 @@ sub summary_command_list{
 	my %seen;
 	my @uniqed = grep !$seen{$_}++, @commands;
 	printf "\\ List of Check Commands\n";
-	foreach my $key (sort { $seen{$b} cmp $seen{$a} } keys %seen ) {
+	foreach my $key (sort { $seen{$b} <=> $seen{$a} } keys %seen ) {
 	     printf " |- %-36s %5s\n",$key,$seen{$key};
 	}   
 }
@@ -220,7 +230,7 @@ sub summary_command_list{
 sub stats{
 	print "\n\n \\Statsistics:\n";
 	foreach my $key (sort { $stats{$b} cmp $stats{$a} } keys %stats ) {
-	     printf " |- %-15s %5s\n",$key,$stats{$key};
+	     printf " |- %-15s %s\n",$key,$stats{$key};
 	}   
 }
 
@@ -275,7 +285,7 @@ sub restore_files(){
 		RRDs::restore($restorefile, $rrdfile, "--force-overwrite");
 		my $err = RRDs::error();
 		if($err){
-			print $err;
+			printf("RRDtool Error: %s\n",$err);
 			exit;
 		}
 		unlink($restorefile);
@@ -310,10 +320,14 @@ sub rrdtool_dump{
 	my $rrdfile = shift;
 	my $dumpfile = shift;
 	print "RRDtool dump to $dumpfile\n";
-	RRDs::dump($rrdfile, $dumpfile, $conf{RRD_DAEMON_OPTS});
+	if ( $conf{RRD_DAEMON_OPTS} ){
+		RRDs::dump($rrdfile, $dumpfile, $conf{RRD_DAEMON_OPTS});
+	}else{
+		RRDs::dump($rrdfile, $dumpfile);
+	}
 	my $err = RRDs::error();
 	if($err){
-		print $err;
+		printf("RRDtool Error: %s\n",$err);
 		exit;
 	}
 	$stats{rrd_in}++;
@@ -412,11 +426,27 @@ sub parse_config {
             }
         }
         close CFG;
-        #print_log( "Using Config File $config_file parameters", 2 );
     }
-    else {
-        #print_log( "Config File $config_file not found, using defaults", 2 );
-    }
+}
+
+sub check_custom_template {
+ 	my $command = $opt_c;
+	if ( $conf{DRY_RUN} == 1 ){
+		print "No config check while DRY_RUN = 1\n";
+		exit;
+		return;
+	}
+	my $config_file = $conf{'CFG_DIR'}."/check_commands/".$command.".cfg";
+	my $storage_type = "MULTIPLE";
+    	if ( -e $config_file ) {
+		print "Config for command $command does already exist ($config_file)\n";
+		exit 0;
+	}else{
+		open(CFG, ">", $config_file);
+		print CFG "# Generated by rrd_convert.pl\n";
+		print CFG "RRD_STORAGE_TYPE = MULTIPLE\n";
+		close(CFG);
+	}
 }
 
 sub read_choice{
@@ -435,6 +465,6 @@ sub print_help{
 }
 
 sub print_version{
-	print "Version!\n";
+	print "Version @PKG_VERSION@\n";
 	exit;
 }
