@@ -19,7 +19,7 @@ a:hover, a:visited, a:active {
 	color: #880000;
 }
 
-a.active { color: 88cc00; }
+a.active { color: #88cc00; }
 
 .gw {
 	min-width: 600px;
@@ -99,17 +99,21 @@ input.textbox {
 }
 .multi1 {
 	padding-left:14px;
-	background: url(../images/int.gif) no-repeat left;
 }
 .multi2 {
 	padding-left:14px;
 	margin-left:8px;
+}
+a.active {
 	background: url(../images/int.gif) no-repeat left;
+}
+a.inactive {
+	background: url(../images/int2.gif) no-repeat left;
 }
 div.header {
 	margin-top: 2px;
 	padding: 2px;
-	#background-color: #c5d8d1;
+	background-color: #c5d8d1;
 }
 
 div.pagebody {
